ubah lokasi map

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ http://www.templatemo.com/tm-502-short
                       <div class="more-info">
                         <p>Bila ada ingin menghubungi lewat email, silahkan isi kolom diatas, saya akan jawab
                           secepatnya.<br><iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1980.1575611894232!2d107.5793363974617!3d-6.972099890151066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e9ae8a9bf409%3A0xc416da59d11fdaf3!2sFathiadi!5e0!3m2!1sid!2sid!4v1675410982758!5m2!1sid!2sid"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.1534714350523!2d107.57157845037855!3d-6.87220739500952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e420abc30acf%3A0x10569255865460a5!2sPoliteknik%20Negeri%20Bandung!5e0!3m2!1sid!2sid!4v1675416622650!5m2!1sid!2sid"
                             width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe><br><em>Permata Kopo 2 Blok A2
                             No.20A<br>Margahayu, Bandung 40227</em></p>
